JumpScript/tests/baselines/reference/asyncSetter_es6.errors.txt
tests/cases/conformance/async/es6/asyncSetter_es6.jump(2,3): error TS1042: 'async' modifier cannot be used here.


==== tests/cases/conformance/async/es6/asyncSetter_es6.jump (1 errors) ====
    class C {
      async set foo(value) {
      ~~~~~
!!! error TS1042: 'async' modifier cannot be used here.
      }
    }